Changed signature of TableView static method which affected many classes